<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    tools:context=".Aktivitet_MoteReg"
    android:background="@color/bakgrunn">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="675dp"
        android:background="@color/toolbar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="120dp"
        android:text="@string/moteRegistrering"
        android:textColor="#040000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtNavnMote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/navn"
        android:textColor="#000000"
        android:inputType="textPersonName"
        android:textColorHint="@color/toolbar" />

    <EditText
        android:id="@+id/txtSted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/sted"
        android:textColor="#000000"
        android:inputType="textPersonName"
        android:textColorHint="@color/toolbar" />


    <EditText
        android:id="@+id/dato"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="310dp"
        android:layout_marginLeft="50dp"
        android:hint="@string/dato"
        android:textColor="#000000"
        android:textColorHint="@color/toolbar"
        />

    <Button
        android:id="@+id/btn_dato"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/dato"
        android:layout_toEndOf="@+id/dato"
        android:background="@color/toolbar"
        android:text="@string/velgDato" />

    <EditText
        android:id="@+id/tid"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="365dp"
        android:hint="@string/tid"
        android:textColor="#000000"
        android:textColorHint="@color/toolbar"
        android:layout_marginLeft="50dp"/>


    <Button
        android:id="@+id/btn_tid"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="365dp"
        android:layout_alignStart="@+id/btn_dato"
        android:layout_alignLeft="@+id/btn_dato"
        android:background="@color/toolbar"
        android:text="@string/velgTid" />


    <Button
        android:id="@+id/btnRegMote"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="167dp"
        android:background="@color/toolbar"
        android:onClick="regMote"
        android:text="@string/registrer" />

</RelativeLayout>
