<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bakgrunn">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="675dp"
        android:background="@color/toolbar" />

    <EditText
        android:id="@+id/txtNavn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/navn"
        android:textColor="#000000"
        app:backgroundTint="@color/toolbar"
        android:textCursorDrawable="@color/knapp"
        android:textColorHint="@color/toolbar" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="118dp"
        android:layout_marginLeft="55dp"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="55dp"
        app:srcCompat="@drawable/ic_baseline_local_phone_24" />


    <EditText
        android:id="@+id/txtTelefonnr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:textColor="#000000"
        android:hint="@string/telefon"
        app:backgroundTint="@color/toolbar"
        android:textCursorDrawable="@color/knapp"
        android:textColorHint="@color/toolbar" />

    <Button
        android:id="@+id/btnRegKontakt"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="280dp"
        android:layout_marginBottom="100dp"
        android:onClick="regKontakt"
        android:background="@color/toolbar"
        android:text="@string/registrer" />

</RelativeLayout>